feature/SHOP-5: Переделал Customer в User. Создал таблицы ролей и привилегий с дополнительными связующими, также добавил соответствующие сущности. Дополнил в сервисе для User метод сохранения(если это регистрация), базово реализовал в нем присвоение роли и привилегий этой роли с проверкой существования в БД. Тестово ограничил один метод контроллера привилегией