@@ -1,5 +1,6 @@
 package com.online.shop.entity;
 
+import com.online.shop.enums.PrivilegeEnum;
 import com.online.shop.exception_handling.CommonRuntimeException;
 import com.online.shop.exception_handling.ErrorCode;
 import jakarta.persistence.*;
@@ -7,87 +8,85 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
- * Класс-сущность покупателя интернет-магазина
+ * Класс-сущность пользователя интернет-магазина
  */
 @Entity
-@Table(name = "customers")
-public class Customer extends AbstractEntity implements UserDetails {
+@Table(name = "users")
+public class User extends AbstractEntity implements UserDetails {
 
     /**
-     * Фамилия покупателя
+     * Фамилия пользователя
      */
     @Column(name = "surname")
     private String surname;
 
     /**
-     * Имя покупателя
+     * Имя пользователя
      */
     @Column(name = "firstname")
     private String firstname;
 
     /**
-     * Отчество покупателя
+     * Отчество пользователя
      */
     @Column(name = "patronymic")
     private String patronymic;
 
     /**
-     * Номер телефона покупателя
+     * Номер телефона пользователя
      */
     @Column(name = "phone_number")
     private String phoneNumber;
 
     /**
-     * E-mail покупателя
+     * E-mail пользователя
      */
     @Column(name = "email")
     private String email;
 
     /**
-     * Пароль покупателя
+     * Пароль пользователя
      */
     @Column(name = "password")
     private String password;
 
     /**
-     * Баланс покупателя
+     * Баланс пользователя
      * <p>При создании на уровне БД устанавливается {@code 0.0}
      */
     @Column(name = "balance")
     private double balance;
 
     /**
-     * Роль пользователя
-     */
-    @Column(name = "role")
-    private String role;
-
-    /**
-     * Статус аккаунта покупателя:
-     * <p>0 - заблокирован
-     * <p>1 - активен
-     * <p>При создании на уровне БД устанавливается {@code 1}
+     * Статус аккаунта пользователя:
+     * <p>{@code false} - заблокирован
+     * <p>{@code true} - активен
      */
     @Column(name = "enabled")
     private boolean enabled;
 
+    @ManyToMany(fetch = FetchType.EAGER)
+    @JoinTable(name = "user_roles",
+            joinColumns = @JoinColumn(name = "user_id"),
+            inverseJoinColumns = @JoinColumn(name = "role_id"))
+    private Set<Role> userRoles;
+
     /**
-     * Список заказов покупателя
+     * Список заказов пользователя
      */
-    @OneToMany(mappedBy = "customer")
+    @OneToMany(mappedBy = "user")
     private List<Order> orders;
 
     /**
-     * Корзина покупателя
+     * Корзина пользователя
      */
     @OneToMany
     @JoinTable(name = "cart",
-            joinColumns = @JoinColumn(name = "customer_id"),
+            joinColumns = @JoinColumn(name = "user_id"),
             inverseJoinColumns = @JoinColumn(name = "goods_id"))
     private List<Goods> goodsInCart;
 
@@ -95,15 +94,14 @@ public class Customer extends AbstractEntity implements UserDetails {
      * Конфигурация аккаунта при регистрации
      */
     @PrePersist
-    public void registrateCustomer() {
+    public void registrateUser() {
         enabled = true;
-        role = "ROLE_" + CustomerRole.USER;
     }
 
-    public Customer() {
+    public User() {
     }
 
-    private Customer(Builder builder) {
+    private User(Builder builder) {
         setSurname(builder.surname);
         setFirstname(builder.firstname);
         setPatronymic(builder.patronymic);
@@ -146,7 +144,12 @@ public class Customer extends AbstractEntity implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role));
+        return userRoles == null ? Collections.emptyList() : userRoles.stream()
+                .flatMap(role -> role.getPrivileges().stream()
+                        .map(Privilege::getPrivilegeName)
+                        .map(PrivilegeEnum::name)
+                        .map(SimpleGrantedAuthority::new))
+                .collect(Collectors.toSet());
     }
 
     public String getPassword() {
@@ -170,20 +173,20 @@ public class Customer extends AbstractEntity implements UserDetails {
         this.balance = balance;
     }
 
-    public String getRole() {
-        return role;
-    }
-
-    public void setRole(String role) {
-        this.role = role;
-    }
-
     public boolean isEnabled() {
         return enabled;
     }
 
     public void setEnabled(boolean enabled) {
         this.enabled = enabled;
+    }
+
+    public Set<Role> getUserRoles() {
+        return userRoles;
+    }
+
+    public void setUserRoles(Set<Role> userRoles) {
+        this.userRoles = userRoles;
     }
 
     public List<Order> getOrders() {
@@ -214,16 +217,16 @@ public class Customer extends AbstractEntity implements UserDetails {
     public boolean equals(Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
-        Customer customer = (Customer) o;
-        return Objects.equals(id, customer.id) &&
-                Objects.equals(surname, customer.surname) &&
-                Objects.equals(firstname, customer.firstname) &&
-                Objects.equals(patronymic, customer.patronymic) &&
-                Objects.equals(phoneNumber, customer.phoneNumber) &&
-                Objects.equals(email, customer.email) &&
-                Objects.equals(password, customer.password) &&
-                Double.compare(balance, customer.balance) == 0 &&
-                enabled == customer.enabled;
+        User user = (User) o;
+        return Objects.equals(id, user.id) &&
+                Objects.equals(surname, user.surname) &&
+                Objects.equals(firstname, user.firstname) &&
+                Objects.equals(patronymic, user.patronymic) &&
+                Objects.equals(phoneNumber, user.phoneNumber) &&
+                Objects.equals(email, user.email) &&
+                Objects.equals(password, user.password) &&
+                Double.compare(balance, user.balance) == 0 &&
+                enabled == user.enabled;
     }
 
     @Override
@@ -233,7 +236,7 @@ public class Customer extends AbstractEntity implements UserDetails {
 
     @Override
     public String toString() {
-        return "Customer{" +
+        return "User{" +
                 "id=" + id +
                 ", surname='" + surname + '\'' +
                 ", firstname='" + firstname + '\'' +
@@ -291,15 +294,15 @@ public class Customer extends AbstractEntity implements UserDetails {
             return this;
         }
 
-        public Customer build() {
+        public User build() {
             if (surname == null || firstname == null || phoneNumber == null || email == null || password == null) {
                 throw new CommonRuntimeException(
                         ErrorCode.INTERNAL_SERVER_ERROR,
-                        "Customer: одно или несколько полей (surname, firstname, phoneNumber, email, password) " +
+                        "User: одно или несколько полей (surname, firstname, phoneNumber, email, password) " +
                                 "ссылаются на null"
                 );
             }
-            return new Customer(this);
+            return new User(this);
         }
     }
 
